deploy/aks/domain/file-store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devkit-ns
  name: file-store-deployment
  labels:
    app: snappy
    name: file-store-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      name: file-store-pod
  template:
    metadata:
      name: file-store-pod
      labels:
        app: snappy
        name: file-store-pod

    spec:
      containers:
        - name: file-store
          image: snappy.azurecr.io/devkit-file-store:#{Build.BuildId}#
          resources:
            requests:
              memory: '128Mi'
              cpu: '1'
            limits:
              memory: '256Mi'
              cpu: '1'
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: app/infrastructure
              name: base-settings
            - mountPath: app/configs
              name: file-store-settings
      volumes:
        - name: file-store-settings
          configMap:
            name: file-store-settings-configmap
        - name: base-settings
          configMap:
            name: base-settings-configmap

---
apiVersion: v1
kind: Service
metadata:
  namespace: devkit-ns
  name: file-store-cluterip
  labels:
    app: snappy
    name: file-store-cluterip

spec:
  type: ClusterIP
  selector:
    app: snappy
    name: file-store-pod
  ports:
    - port: 80
      targetPort: 80
