deploy/aks/domain/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: devkit-ns
  labels:
    app: snappy
    name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snappy
      name: gateway-pod
  template:
    metadata:
      name: gateway-pod
      labels:
        app: snappy
        name: gateway-pod
    spec:
      containers:
      - name: gateway
        image: snappy.azurecr.io/devkit-gateway:#{Build.BuildId}#
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: app/infrastructure
          name: base-settings
        - mountPath: app/configs
          name: gateway-settings
        - mountPath: app/configs/mobile
          name: ocelot
      volumes:
      - name: gateway-settings
        configMap:
          name: gateway-settings-configmap
      - name: base-settings
        configMap: 
          name: base-settings-configmap
      - name: ocelot
        configMap:
          name: ocelot-configmap

---

apiVersion: v1
kind: Service
metadata:
  namespace: devkit-ns
  name: gateway-clusterip
  labels:
    app: snappy
    name: gateway-clusterip

spec:
  type: ClusterIP
  selector:
    app: snappy
    name: gateway-pod
  ports:
    - port: 80
      targetPort: 80
