deploy/aks/domain/ratings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devkit-ns
  name: ratings-deployment
  labels:
    app: snappy
    name: ratings-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      name: ratings-pod
  template: 
    metadata:
      name: ratings-pod
      labels:
        app: snappy
        name: ratings-pod

    spec:
      containers:
      - name: ratings
        image: snappy.azurecr.io/devkit-ratings:#{Build.BuildId}#
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports: 
          - containerPort: 80
        volumeMounts:
        - mountPath: app/infrastructure
          name: base-settings
        - mountPath: app/configs
          name: ratings-settings
      volumes:
      - name: ratings-settings
        configMap:
          name: ratings-settings-configmap
      - name: base-settings
        configMap: 
          name: base-settings-configmap

---

apiVersion: v1
kind: Service
metadata:
  namespace: devkit-ns
  name: ratings-cluterip
  labels:
    app: snappy
    name: ratings-cluterip

spec:
  type: ClusterIP
  selector:
    app: snappy
    name: ratings-pod
  ports:
    - port: 80
      targetPort: 80
