deploy/aks/domain/security.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devkit-ns
  name: security-deployment
  labels:
    app: devkit
    name: security-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      name: security-pod
  template:
    metadata:
      name: security-pod
      labels:
        app: devkit
        name: security-pod

    spec:
      containers:
        - name: security
          image: devkit.azurecr.io/devkit-security:#{Build.BuildId}#
          resources:
            requests:
              memory: "128Mi"
              cpu: "1"
            limits:
              memory: "256Mi"
              cpu: "1"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: app/infrastructure
              name: base-settings
            - mountPath: app/configs
              name: security-settings
      volumes:
        - name: security-settings
          configMap:
            name: security-settings-configmap
        - name: base-settings
          configMap:
            name: base-settings-configmap

---
apiVersion: v1
kind: Service
metadata:
  namespace: devkit-ns
  name: security-clusterip
  labels:
    app: devkit
    name: security-clusterip

spec:
  type: ClusterIP
  selector:
    app: devkit
    name: security-pod
  ports:
    - port: 80
      targetPort: 80
