deploy/aks/domain/store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devkit-ns
  name: store-deployment
  labels:
    app: devkit
    name: store-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      name: store-pod
  template:
    metadata:
      name: store-pod
      labels:
        app: devkit
        name: store-pod

    spec:
      containers:
        - name: store
          image: devkit.azurecr.io/logistics-store:#{Build.BuildId}#
          resources:
            requests:
              memory: "128Mi"
              cpu: "1"
            limits:
              memory: "256Mi"
              cpu: "1"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: app/infrastructure
              name: base-settings
            - mountPath: app/configs
              name: store-settings
      volumes:
        - name: store-settings
          configMap:
            name: store-settings-configmap
        - name: base-settings
          configMap:
            name: base-settings-configmap

---
apiVersion: v1
kind: Service
metadata:
  namespace: devkit-ns
  name: store-cluterip
  labels:
    app: devkit
    name: store-cluterip

spec:
  type: ClusterIP
  selector:
    app: devkit
    name: store-pod
  ports:
    - port: 80
      targetPort: 80
